<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Dídekin</string>
    <string name="dos_puntos" translatable="false">:</string>
    <string name="no_sabe" translatable="false">....</string>
    <string name="decimal_separator">,</string>
    <string name="search_button">Buscar</string>
    <string name="checkbox_si">Sí</string>
    <string name="checkbox_no">No</string>
    <string name="euros_rot">EUR</string>
    <string name="navigate_up_txt">Desplazarse hacia arriba</string>
    <string name="modif_button_rot">Modificar</string>
    <string name="continuar_button_rot">Continuar</string>
    <string name="borrar_button_rot">Borrar</string>
    <string name="exception_generic_app_message">No podemos continuar. Busca tu comunidad o haz login.</string>
    <string name="no_internet_conn_toast">No hay conexión de red disponible.</string>
    <string name="error_validation_msg">Los siguientes datos no son válidos:</string>
    <string name="gcm_message_generic_subtext">Pulsa aquí para ver los detalles.</string>
    <string name="confidencialidad_mn">Privacidad</string>
    <string name="confidencialidad_ac_label">Protección de datos</string>
    <string name="proteccion_datos_txt" tools:ignore="Typos">
        Versión 30 septiembre de 2017 \n\n

        La presente Política de Privacidad informa sobre el modo en que Dídekin recoge y
        trata la información recogida sobre los usuarios de la aplicación.
        Al registrarse en Dídekin, usted acepta esta política de privacidad.\n\n

        1. OBJETIVO DE LA APLICACIÓN\n\n

        Dídekin tiene como objetivo recoger, presentar y compartir información sobre la
        administración de las comunidades de propietarios que se registren. También puede
        ser utilizada por comunidades de un solo propietario, en el caso de viviendas
        no integradas en una comunidad. \n\n

        2. DATOS RECOGIDOS\n\n

        Los datos que registramos sobre usted son: \n
        - Nombre y apellidos. \n
        - Dirección de correo electrónico. \n
        - Domicilio. \n
        - Rol dentro de la comunidad. \n\n
        Dentro de una comunidad, usted puede desempeñar uno o más roles, entre los siguientes:
        presidente, propietario, arrendatario o inquilino, y administrador.\n\n

        Los datos sobre comunidades son:\n
        - Domicilio. \n
        - Datos sobre incidencias: \n
            \t • Fechas: de inicio y de resolución.\n
            \t • Descripción. \n
            \t • Historial de avances. \n
            \t • Urgencia de la incidencia. \n
            \t • Coste estimado (opcional). \n
            \t • Coste real (opcional). \n\n

        3. UTILIZACIÓN DE LA INFORMACIÓN \n\n

        La información recogida se utiliza para confeccionar estadísticas de tiempo y coste
        de resolución de incidencias, agregadas según dos criterios principales:\n
        - Por ámbito geográfico.\n
        - Por tipo de incidencia.\n\n

        4. ACCESO A LA INFORMACIÓN \n\n

        Los datos personales que recogemos sobre usted sólo son accesibles a otros miembros
        de las comunidades de propietarios a las que usted pertenece. \n

        Los datos particulares sobre incidencias sólo son accesible dentro de la misma comunidad
        donde se produce la incidencia. \n

        Los datos estadísticos elaborados a partir de incidencias particulares son accesibles
        por todos los usuarios de Dídekin. \n\n

        5. MANTENIMIENTO Y BORRADO DE DATOS \n\n

        En cualquier momento, usted puede modificar sus datos personales o borrarlos definitivamente,
        a través de la propia aplicación. \n

        Los datos sobre incidencias pueden ser modificados y borrados, a través de la aplicación,
        por aquellos usuarios registrados con los roles de presidente o administrador de una
        comunidad de propietarios. \n\n

        6. MAYORÍA DE EDAD \n\n

        Dídekin es una aplicación para personas mayores de 16 años. Cuando usted se registra,
        usted reconoce expresamente no tener una edad menor. \n
        Si no se cumpliera este requerimiento, su datos de usuario podríamos borrarlos, una
        vez que tuviéramos conocimiento del hecho. \n\n

        7. CAMBIOS EN LA POLÍTICA DE PRIVACIDAD \n\n

        Cambios futuros en la aplicación podrían requerir cambios, a su vez, en nuestra política
        de protección de datos personales o de la comunidad. \n
        En ese caso, se lo notificaríamos a través de la propia aplicación (\'PRIVACIDAD\', en
        el menú principal de Dídekin) o mediante correo electrónico, según fueren las circunstancias. \n\n

        8. OBLIGACIONES LEGALES  \n\n

        De conformidad con lo establecido por la Ley Orgánica 15/1999, de 13 de diciembre,
        de Protección de Datos de Carácter Personal, Pedro Nevado Raja (NIF: 51640599X),
        propietario de Dídekin, con domicilio en Ronda de la Plazuela 8 bis, de Las Rozas de Madrid,
        le informa de la existencia de un fichero automatizado con los datos personales y de comunidades,
        creado por él y bajo su responsabilidad." \n

    </string>
    <string name="confidencialidad_button_rot">Continuar</string>
    <string name="no_incidencia_to_show">No hay incidencias que mostrar</string>
    <string name="incidencia_not_registered">Intenta nuevamente registrar la incidencia.</string>
    <string name="incidencia_wrong_init">Verifica que sigue abierta la incidencia.
    </string>
    <string name="resolucion_duplicada">Ya existe resolución para esta incidencia</string>
    <string name="user_without_powers">Haz login y accede nuevamente a la incidencia.</string>
    <string name="incid_gcm_nueva_incidencia_body">Nueva incidencia en tu comunidad.</string>
    <string name="incid_gcm_incidencia_closed_body">Incidencia resuelta en tu comunidad.</string>
    <string name="incid_gcm_resolucion_open_body">Incidencia en tu comunidad en trámite de resolución.</string>
    <string name="incid_closed_see_by_comu_ac_mn">Incidencias cerradas</string>
    <string name="incid_comment_reg_ac_mn">Comentar</string>
    <string name="incid_comments_see_ac_mn">Comentarios</string>
    <string name="incid_reg_ac_mn">Nueva incidencia</string>
    <string name="incid_open_see_by_comu_ac_mn">Incidencias abiertas</string>
    <string name="incid_resolucion_ac_mn">Resolución</string>
    <string name="incid_incidencia_rot">Incidencia:</string>
    <string name="incid_comment_reg_ac_label">Comentar una incidencia</string>
    <string name="incid_comment_ed_hint">----- Comentario (max. 250 caracteres) ----</string>
    <string name="incid_comment_ed_button_rot">Comentar</string>
    <string name="incid_comment_label">Comentario</string>
    <string name="incid_comment_see_ac_label">Comentarios</string>
    <string name="incid_comment_see_comments_rot">Comentarios:</string>
    <string name="incid_comments_see_no_comments">No hay comentarios.</string>
    <string name="incid_edit_ac_label">Incidencia</string>
    <string name="no_importancia_by_user">No hay otras valoraciones en la comunidad</string>
    <string name="incid_incidencia_importancia_rot">Importancia en la comunidad:</string>
    <string name="incid_reg_ac_label">Nueva incidencia</string>
    <string name="incid_reg_hint">-- Describe la incidencia (max. 300 caracteres) --</string>
    <string name="incid_reg_ac_button_rot">Registrar incidencia</string>
    <string name="incid_reg_importancia">Importancia</string>
    <string name="incid_reg_ambitoIncidencia">Ámbito de incidencia</string>
    <string name="incid_reg_descripcion">Descripcion</string>
    <string name="incid_resolucion_coste_final_rot">Coste final EUR:</string>
    <string name="incid_resolucion_avance_rot">Nueva información</string>
    <string name="incid_resolucion_modif_button_rot">Modificar</string>
    <string name="incid_resolucion_close_button_rot">Modificar y cerrar</string>
    <string name="incid_resolucion_plan_rot">Plan:</string>
    <string name="incid_resolucion_avance_hint">-- avance o cambio en el plan --</string>
    <string name="incid_resolucion_avances_rot">Historial de avances:</string>
    <string name="incid_resolucion_no_avances_message">No hay avances registrados</string>
    <string name="incid_resolution_ac_label">Resolución incidencia</string>
    <string name="incid_resolucion_descrip_msg">Descripción</string>
    <string name="incid_resolucion_fecha_prev">Fecha estimada:</string>
    <string name="incid_resolucion_fecha_prev_msg">Fecha resolución</string>
    <string name="incid_resolucion_fecha_default_txt">>> Elige una fecha</string>
    <string name="incid_resolucion_hint">-- plan para resolver la incidencia --</string>
    <string name="incid_resolucion_reg_ac_button_rot">Registrar resolución</string>
    <string name="incid_resolucion_rot">Datos resolución</string>
    <string name="incid_resolucion_coste_prev_rot">Coste estimado EUR:</string>
    <string name="incid_resolucion_coste_prev_hint">-- tu estimación --</string>
    <string name="incid_resolucion_coste_prev_msg">Coste estimado</string>
    <string name="incid_see_by_user_ac_label">Tus incidencias</string>
    <string name="incid_apertura_rot">Apertura:</string>
    <string name="incid_cierre_rot">Cierre:</string>
    <string name="incid_importancia_user_rot">Importancia:</string>
    <string name="incid_importancia_comunidad_rot">Importancia en la comunidad:</string>
    <string name="incid_comunidad_rot">Comunidad:</string>
    <string name="incid_incidencias_rot">Incidencias:</string>
    <string name="incid_ambito_rot">Ámbito:</string>
    <string name="incid_see_resolucion_label">Resolución:</string>
    <string name="incid_see_resolucion_fecha_alta_label">iniciada</string>
    <string name="incid_closed_by_user_ac_label">Incidencias cerradas</string>
    <string name="comunidad_null_in_register">Comunidad</string>
    <string name="comunidad_not_found_message">No podemos mostrarte esta comunidad. Búscala nuevamente.</string>
    <string name="comunidad_duplicate">Esta comunidad ya había sido registrada</string>
    <string name="comu_data_ac_mn">Datos comunidad</string>
    <string name="comu_search_ac_mn">Buscar comunidad</string>
    <string name="login_ac_mn">Login</string>
    <string name="reg_nueva_comunidad_ac_mn">Nueva comunidad</string>
    <string name="see_usercomu_by_comu_ac_mn">Vecinos</string>
    <string name="see_usercomu_by_user_ac_mn">Tus comunidades</string>
    <string name="user_data_ac_mn">Tu usuario</string>
    <string name="login_ac_rotulo">Inicio de sesión</string>
    <string name="login_ac_button_txt">Valida tus datos</string>
    <string name="reg_usercomu_vivienda_rot">Tu vivienda</string>
    <string name="reg_usercomu_portal_hint">-- Portal --</string>
    <string name="reg_usercomu_escalera_hint">-- Escalera --</string>
    <string name="reg_usercomu_planta_hint">-- Planta --</string>
    <string name="reg_usercomu_puerta_hint">-- Puerta --</string>
    <string name="reg_usercomu_role_checkbox_rot">Vínculo</string>
    <string name="reg_usercomu_checkbox_pre_rot">Presidente</string>
    <string name="reg_usercomu_checbox_admin_rot">Administrador</string>
    <string name="reg_usercomu_checbox_pro_rot">Propietario</string>
    <string name="reg_usercomu_checbox_inq_rot">Arrendatario</string>
    <string name="nombre_via_hint">Nombre de la vía, sin número</string>
    <string name="sufijo_numero_en_via_hint">Sufijo (op.)</string>
    <string name="numero_en_via">Número</string>
    <string name="reg_usuario_rotulo">Tus datos</string>
    <string name="password">Contraseña</string>
    <string name="usuario_password_hint">Contraseña: 6–60 letras, números, _</string>
    <string name="usuario_password_confirm_hint">Confirmación contraseña</string>
    <string name="usuario_alias_hint">Nombre: 6–30 letras, números, _</string>
    <string name="email_hint">Correo electrónico</string>
</resources>