<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/baseLayout"
                android:id="@+id/reg_usuariocomunidad_layout">
    <TextView
            android:id="@+id/reg_usercomu_vivienda_rot"
            style="@style/textBase.textPageLabel2"
            android:text="@string/reg_usercomu_vivienda_rot"
            android:layout_alignParentStart="true"/>

    <EditText
            android:id="@+id/reg_usercomu_portal_ed"
            style="@style/textBase.editField"
            android:inputType="textCapWords"
            android:maxEms="10"
            android:hint="@string/reg_usercomu_portal_hint"
            android:layout_alignParentStart="true"
            android:layout_below="@id/reg_usercomu_vivienda_rot"/>

    <EditText
            android:id="@+id/reg_usercomu_escalera_ed"
            style="@style/textBase.editField"
            android:inputType="textCapWords"
            android:maxEms="10"
            android:hint="@string/reg_usercomu_escalera_hint"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/reg_usercomu_portal_ed"
            android:layout_alignTop="@id/reg_usercomu_portal_ed"
            android:layout_alignBottom="@id/reg_usercomu_portal_ed"/>

    <EditText
            android:id="@+id/reg_usercomu_planta_ed"
            style="@style/textBase.editField"
            android:inputType="textCapWords"
            android:maxEms="10"
            android:hint="@string/reg_usercomu_planta_hint"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/reg_usercomu_escalera_ed"
            android:layout_alignTop="@id/reg_usercomu_portal_ed"
            android:layout_alignBottom="@id/reg_usercomu_portal_ed"/>

    <EditText
            android:id="@+id/reg_usercomu_puerta_ed"
            style="@style/textBase.editField"
            android:inputType="textCapWords"
            android:maxEms="10"
            android:hint="@string/reg_usercomu_puerta_hint"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/reg_usercomu_planta_ed"
            android:layout_alignTop="@id/reg_usercomu_portal_ed"
            android:layout_alignBottom="@id/reg_usercomu_portal_ed"/>

    <TextView
            android:id="@+id/reg_usercomu_roles_checkbox_rot"
            style="@style/textBase.textFieldLabel1"
            android:text="@string/reg_usercomu_role_checkbox_rot"
            android:layout_below="@id/reg_usercomu_puerta_ed"
            android:layout_alignParentStart="true"/>

    <CheckBox
            android:id="@+id/reg_usercomu_checbox_pre"
            style="@style/textBase.textFieldLabel2"
            android:text="@string/reg_usercomu_checkbox_pre_rot"
            android:layout_below="@id/reg_usercomu_roles_checkbox_rot"/>

    <CheckBox
            android:id="@+id/reg_usercomu_checbox_admin"
            style="@style/textBase.textFieldLabel2"
            android:text="@string/reg_usercomu_checbox_admin_rot"
            android:layout_below="@id/reg_usercomu_checbox_pre"/>

    <CheckBox
            android:id="@+id/reg_usercomu_checbox_pro"
            style="@style/textBase.textFieldLabel2"
            android:text="@string/reg_usercomu_checbox_pro_rot"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/reg_usercomu_checbox_pre"
            android:layout_alignTop="@id/reg_usercomu_checbox_pre"
            android:layout_alignBottom="@id/reg_usercomu_checbox_pre"/>

    <CheckBox
            android:id="@+id/reg_usercomu_checbox_inq"
            style="@style/textBase.textFieldLabel2"
            android:text="@string/reg_usercomu_checbox_inq_rot"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/reg_usercomu_checbox_admin"
            android:layout_alignTop="@id/reg_usercomu_checbox_admin"
            android:layout_alignBottom="@id/reg_usercomu_checbox_admin"/>

</RelativeLayout>