<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.didekindroid.com.didekinaar.comunidad.ComuSearchAc">
    <item
        android:id="@+id/login_ac_mn"
        android:orderInCategory="100"
        android:title="@string/login_ac_mn"
        android:visible="false"
        android:enabled="false"
        app:showAsAction="always" tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/see_usercomu_by_user_ac_mn"
        android:title="@string/see_usercomu_by_user_ac_mn"
        android:orderInCategory="100"
        android:visible="false"
        android:enabled="false"
        app:showAsAction="never|withText"/>
    <item
        android:id="@+id/user_data_ac_mn"
        android:orderInCategory="200"
        android:title="@string/user_data_ac_mn"
        android:visible="false"
        android:enabled="false"
        app:showAsAction="never|withText"/>
    <item
        android:id="@+id/reg_nueva_comunidad_ac_mn"
        android:orderInCategory="200"
        android:title="@string/reg_nueva_comunidad_ac_mn"
        app:showAsAction="never|withText"/>
</menu>
