<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/reg_usuario_layout">

    <TextView
            android:id="@+id/reg_usuario_rotulo"
            android:text="@string/reg_usuario_rotulo"
            android:textStyle="bold"
            android:textSize="@dimen/text_rotulo_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentStart="true"/>

    <EditText
            android:id="@+id/reg_usuario_password_ediT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/text_hint_size"
            android:imeOptions="actionNext"
            android:maxEms="50"
            android:hint="@string/usuario_password_hint"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentStart="true"
            android:layout_below="@id/reg_usuario_rotulo"/>

    <EditText
            android:id="@+id/reg_usuario_password_confirm_ediT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/text_hint_size"
            android:imeOptions="actionNext"
            android:maxEms="50"
            android:hint="@string/usuario_password_confirm_hint"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentStart="true"
            android:layout_below="@id/reg_usuario_password_ediT"/>

    <EditText
            android:id="@+id/reg_usuario_email_editT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_hint_size"
            android:imeOptions="actionNext"
            android:maxEms="60"
            android:hint="@string/email_hint"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentStart="true"
            android:layout_below="@id/reg_usuario_password_confirm_ediT"/>

    <EditText
            android:id="@+id/reg_usuario_alias_ediT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/text_hint_size"
            android:imeOptions="actionNext"
            android:maxEms="30"
            android:hint="@string/usuario_alias_hint"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentStart="true"
            android:layout_below="@id/reg_usuario_email_editT"/>
</RelativeLayout>