<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/incid_resolucion_see_fr_layout"
    style="@style/baseLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/app_bar_bottom_margin"
    tools:context=".incidencia.activity.IncidResolucionSeeFr">
    <!--Rótulo de la página-->
    <TextView
        android:id="@+id/incid_resolucion_rot"
        style="@style/textBase.textPageLabel2"
        android:text="@string/incid_resolucion_rot"/>
    <!--Fecha estimada-->
    <LinearLayout
        android:id="@+id/incid_resolucion_fecha_prev_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/incid_resolucion_fecha_prev_rot"
            style="@style/textBase.textFieldLabel1"
            android:text="@string/incid_resolucion_fecha_prev"/>
        <TextView
            android:id="@+id/incid_resolucion_fecha_view"
            style="@style/textBase.textFieldLabel2"/>
    </LinearLayout>
    <!--Coste estimado-->
    <LinearLayout
        android:id="@+id/incid_resolucion_coste_prev_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/incid_resolucion_coste_prev_rot"
            style="@style/textBase.textFieldLabel1"
            android:text="@string/incid_resolucion_coste_prev_rot"/>
        <TextView
            android:id="@+id/incid_resolucion_coste_prev_view"
            style="@style/textBase.textFieldLabel2"/>
    </LinearLayout>
    <!-- Descripción plan y lista de avances-->
    <include layout="@layout/incid_resolucion_edit_see_include"/>
</LinearLayout>